# coronal-backend

./: .env  .gitignore  DataProcessing.ipynb  Dockerfile  README.md  Time_Series_Regression.ipynb  api.py  basemodel-WIP.ipynb  basemodel_v1.py  database.csv  database.xlsx  pyproject.toml
.ipynb_checkpoints/: DataProcessing-checkpoint.ipynb
base_model/: AHYIJDV_anomalies.csv  Testing the basemodel script.ipynb  basemodel.py  basemodel.py usage.ipynb
base_model/.ipynb_checkpoints/: Testing the basemodel script-checkpoint.ipynb  basemodel.py usage-checkpoint.ipynb
base_model/data/: IndividualRed_steps.csv  IndividualYellow_steps.csv
base_model/results/: AHYIJDV_alerts-all.csv  AHYIJDV_anomalies-all.csv  IndividualGreen_anomalies.csv  IndividualRed_alerts.csv  IndividualRed_anomalies.csv  IndividualYellow_alerts.csv  IndividualYellow_anomalies.csv
