[tool.poetry]
name = "coronal-backend"
version = "0.1.0"
description = ""
authors = ["Richard <hausman.richard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
uvicorn = "^0.13.3"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
